@@ -417,8 +417,11 @@ namespace Susy
       }
 
       // Event Flag to check for LAr, bad jet, etc. List found in SusyDefs.h under EventCheck
-      // This is somewhat poorly named...
+      // This will be phased out
       int evtFlag[NtSys_N];
+
+      // Event cleaning cut flags. The bits are defined in SusyDefs as EventCleaningCuts
+      unsigned int cutFlags[NtSys_N];
 
       // Reweighting and scaling
       float wPileup;            // pileup weight for full dataset
@@ -453,12 +456,13 @@ namespace Susy
 	susyFinalState = -1;
         passMllForAlpgen = true;
 	memset(evtFlag,0,sizeof(evtFlag));
+	memset(cutFlags,0,sizeof(cutFlags));
         wPileup = wPileupAB3 = wPileupAB = 0;
         xsec = lumiSF = sumw = pdfSF = 0;
 	pdf_id1 = pdf_id2 = pdf_x1 = pdf_x2 = pdf_scale = 0;
       }
 
-      ClassDef(Event, 17);
+      ClassDef(Event, 18);
   };
 
 };
